Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2006-06-26 (CVS):
    * updated opengl header includes
    * improted Xcode build files for MacOSX. from Levent Yavas.

2006-06-25 (CVS, 1.4.1-pre7):
    * added a hexen2 dedicated server which seems to work much better than
      the client/server application running in dedicated mode. model loading
      implementation taken from LordHavoc's old lhnqserver, as it seems better
      than the one in hexenworld server.
    * h2ded: in NET_SendToAll, a check for canSend had to be added. otherwise
      a changelevel issued by the progs doesn't work. if compiled in debug
      mode, it is revealed thatthe message was being attempted to be sent
      while canSend was false. on the otherhand, a changelevel from the
      console seemed fine..
    * separated cl_effect.c and sv_effect.c for easier maintainance
    * renamed CL_CopyFiles to Host_CopyFiles and CL_RemoveGIPFiles to
      Host_RemoveGIPFiles, moved them to host.c
    * added Q_malloc, Q_free and COM_LoadMallocFile, which may become useful.
      found among some old sources by LordHavoc.
    * move the multiplayer game saves while moving the user data, as well.
    * moved mousestate activation stuff to CL_ParseServerInfo
    * better handling of the +attack/-attack demo recording hack
    * added timeBeginPeriod to win32 timeGetTime usage
    * misc clean-ups and prepare for merging a dedicated server
    * marked the snapshot of 2006-06-25 as 1.4.1-pre7

2006-06-17 (CVS, 1.4.1-pre6):
    * merged a newer version of sdl cdaudio driver: lifted from the twilight
      project and applied additional bug fixes. the older driver we took from
      sdlquake was noticably slowing down the game.
    * skip intermissions while recording demos across multiple levels,
      but stop recording at ending scenes.
    * do the GETOSPACE ioctl after setting the parameters and just before